--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
-    "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-avatar": "^5.0.3",
     "react-dom": "^18.3.1",
@@ -20,8 +20,7 @@
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.0",
     "react-router-dom": "^6.26.1",
-    "swiper": "^11.1.10",
-    "three": "^0.170.0"
+    "swiper": "^11.1.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
