--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/el-messiri": "^5.1.0",
+    "@fontsource/krona-one": "^5.1.0",
     "@react-icons/all-files": "^4.1.0",
     "@react-three/fiber": "^8.17.10",
     "axios": "^1.7.7",
