--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@react-icons/all-files": "^4.1.0",
     "@react-three/fiber": "^8.17.10",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-avatar": "^5.0.3",
+    "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.3.0",
