--- a/package.json
+++ b/package.json
@@ -14,19 +14,25 @@
     "@fontsource/krona-one": "^5.1.0",
     "@fontsource/poppins": "^5.1.1",
     "@react-icons/all-files": "^4.1.0",
-    "@react-three/fiber": "^8.17.10",
+    "@react-oauth/google": "^0.12.1",
+    "@react-three/drei": "^9.121.5",
+    "@react-three/fiber": "^8.17.14",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
-    "framer-motion": "^11.15.0",
+    "chart.js": "^4.4.7",
+    "framer-motion": "^11.18.2",
     "react": "^18.3.1",
     "react-avatar": "^5.0.3",
     "react-bootstrap": "^2.10.7",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.13.0",
-    "react-router-dom": "^6.26.1",
-    "swiper": "^11.1.15"
+    "react-router-dom": "^6.28.2",
+    "recharts": "^2.15.0",
+    "swiper": "^11.1.15",
+    "three": "^0.173.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
